attached_assets/Pasted-root-vultr-var-www-url-campaign-fix-db-esm-sh-Fixing-ESM-import-issues-with-pg-package-Fixi-1745742856384.txt
root@vultr:/var/www/url-campaign# ./fix-db-esm.sh
Fixing ESM import issues with pg package...
Fixing vite.config.ts to properly handle ESM/CommonJS...
Creating a build script that uses CommonJS format instead of ESM...
Running the fixed build script...
Building client with Vite...
failed to load config from /var/www/url-campaign/vite.config.ts
error during build:
file:///var/www/url-campaign/vite.config.ts.timestamp-1745742840833-7d4a59526dd75.mjs:4
import cartographer from "file:///var/www/url-campaign/node_modules/@replit/vite-plugin-cartographer/dist/index.mjs";
       ^^^^^^^^^^^^
SyntaxError: The requested module 'file:///var/www/url-campaign/node_modules/@replit/vite-plugin-cartographer/dist/index.mjs' does not provide an export named 'default'
    at ModuleJob._instantiate (node:internal/modules/esm/module_job:175:21)
    at async ModuleJob.run (node:internal/modules/esm/module_job:258:5)
    at async ModuleLoader.import (node:internal/modules/esm/loader:540:24)
    at async loadConfigFromBundledFile (file:///var/www/url-campaign/node_modules/vite/dist/node/chunks/dep-CHZK6zbr.js:66866:15)
    at async loadConfigFromFile (file:///var/www/url-campaign/node_modules/vite/dist/node/chunks/dep-CHZK6zbr.js:66707:24)
    at async resolveConfig (file:///var/www/url-campaign/node_modules/vite/dist/node/chunks/dep-CHZK6zbr.js:66307:24)
    at async build (file:///var/www/url-campaign/node_modules/vite/dist/node/chunks/dep-CHZK6zbr.js:65395:18)
    at async CAC.<anonymous> (file:///var/www/url-campaign/node_modules/vite/dist/node/cli.js:829:5)
Building server with esbuild using CommonJS format...
▲ [WARNING] "import.meta" is not available with the "cjs" output format and will be empty [empty-import-meta]

    server/vite.ts:71:32:
      71 │   const distPath = path.resolve(import.meta.dirname, "public");
         ╵                                 ~~~~~~~~~~~

  You need to set the output format to "esm" for "import.meta" to work correctly.

▲ [WARNING] Duplicate member "spentValuePausedCampaigns" in class body [duplicate-class-member]

    server/trafficstar-service.ts:1507:10:
      1507 │   private spentValuePausedCampaigns: Map<number, { pausedAt: Date, recheckAt: Date, disabledThresholdForDate: string }> = new Map();
           ╵           ~~~~~~~~~~~~~~~~~~~~~~~~~

  The original member "spentValuePausedCampaigns" is here:

    server/trafficstar-service.ts:76:10:
      76 │   private spentValuePausedCampaigns: Map<number, {
         ╵           ~~~~~~~~~~~~~~~~~~~~~~~~~

▲ [WARNING] Duplicate member "budgetAdjustedCampaigns" in class body [duplicate-class-member]

    server/trafficstar-service.ts:1514:10:
      1514 │   private budgetAdjustedCampaigns: Map<number, string> = new Map();
           ╵           ~~~~~~~~~~~~~~~~~~~~~~~

  The original member "budgetAdjustedCampaigns" is here:

    server/trafficstar-service.ts:72:10:
      72 │   private budgetAdjustedCampaigns: Map<number, string> = new Map();
         ╵           ~~~~~~~~~~~~~~~~~~~~~~~

3 warnings

  dist/index.js  262.1kb

⚡ Done in 34ms
Build completed successfully.
Restarting the application with PM2...
Use --update-env to update environment variables
[PM2] Applying action restartProcessId on app [url-campaign](ids: [ 0 ])
[PM2] [url-campaign](0) ✓
┌────┬─────────────────┬─────────────┬─────────┬─────────┬──────────┬────────┬──────┬───────────┬──────────┬──────────┬──────────┬──────────┐
│ id │ name            │ namespace   │ version │ mode    │ pid      │ uptime │ ↺    │ status    │ cpu      │ mem      │ user     │ watching │
├────┼─────────────────┼─────────────┼─────────┼─────────┼──────────┼────────┼──────┼───────────┼──────────┼──────────┼──────────┼──────────┤
│ 0  │ url-campaign    │ default     │ 1.0.0   │ fork    │ 25010    │ 0s     │ 37   │ online    │ 0%       │ 3.5mb    │ root     │ disabled │
└────┴─────────────────┴─────────────┴─────────┴─────────┴──────────┴────────┴──────┴───────────┴──────────┴──────────┴──────────┴──────────┘
Fix complete. Check application status with: pm2 status url-campaign
Check logs with: pm2 logs url-campaign
root@vultr:/var/www/url-campaign#
